--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -68,6 +68,13 @@
 			<link rel="stylesheet"
 				href="../static/css/main.css"
 				th:href="@{/css/main.css}" />
+				
+			<!-- animate -->
+			<link rel="stylesheet"
+				href="../static/css/animate.css"
+				th:href="@{/css/animate.css}" />
+				
+			
 			
 				
 				
