Bugfix sedeoperativo check + aggiunte label

--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -59,10 +59,10 @@
 																<tr>
 																	<td><a th:text="#{label.provider}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/edit|}">label.provider</a></td>
 																	<td	th:if="${accreditamentoWrapper.providerStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.providerStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																
@@ -70,10 +70,10 @@
 																	<td th:if="${accreditamentoWrapper.sedeLegale.new}"><a th:text="#{label.sede_legale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/sede/new?tipologiaSede=SedeLegale|}"></a></td>
 																	<td th:unless="${accreditamentoWrapper.sedeLegale.new}"><a th:text="#{label.sede_legale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/sede/${accreditamentoWrapper.sedeLegale.id}/edit?tipologiaSede=SedeLegale|}"></a></td>
 																	<td	th:if="${accreditamentoWrapper.sedeLegaleStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.sedeLegaleStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																
@@ -81,10 +81,10 @@
 																	<td th:if="${accreditamentoWrapper.sedeOperativa.new}"><a th:text="#{label.sede_operativa}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/sede/new?tipologiaSede=SedeOperativa|}"></a></td>
 																	<td th:unless="${accreditamentoWrapper.sedeOperativa.new}"><a th:text="#{label.sede_operativa}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/sede/${accreditamentoWrapper.provider.sedeOperativa.id}/edit?tipologiaSede=SedeOperativa|}"></a></td>
 																	<td	th:if="${accreditamentoWrapper.sedeOperativaStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.sedeOperativaStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																
@@ -93,10 +93,10 @@
 																	<td th:if="${accreditamentoWrapper.legaleRappresentante == null}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=LEGALE_RAPPRESENTANTE|}"></a></td>
 																
 																	<td	th:unless="${accreditamentoWrapper.legaleRappresentanteStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																	<td	th:if="${accreditamentoWrapper.legaleRappresentanteStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																</tr>
 																
@@ -108,7 +108,7 @@
 																		<span class="fa fa-remove grey" th:title="#{label.facoltativo}"></span>
 																	</td>
 																	<td	th:if="${accreditamentoWrapper.delegatoLegaleRappresentanteStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																</tr>
 															</tbody>
@@ -138,10 +138,10 @@
 																	<td th:if="${accreditamentoWrapper.datiAccreditamento.new}"><a th:text="#{label.dati_accreditamento}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/new|}"></a></td>
 																	<td th:unless="${accreditamentoWrapper.datiAccreditamento.new}"><a th:text="#{label.dati_accreditamento}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/edit|}"></a></td>
 																	<td	th:if="${accreditamentoWrapper.datiAccreditamentoStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.datiAccreditamentoStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr> 
 															</tbody>
@@ -175,20 +175,20 @@
 																	<td th:if="${accreditamentoWrapper.responsabileSegreteria == null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_SEGRETERIA|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.responsabileSegreteriaStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.responsabileSegreteriaStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td th:if="${accreditamentoWrapper.responsabileAmministrativo != null}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileAmministrativo.id}/edit|}"></a></td>
 																	<td th:if="${accreditamentoWrapper.responsabileAmministrativo == null}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_AMMINISTRATIVO|}"></a></td>
 																	<td	th:if="${accreditamentoWrapper.responsabileAmministrativoStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.responsabileAmministrativoStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																
 																</tr>
@@ -196,20 +196,20 @@
 																	<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSistemaInformatico.id}/edit|}"></a></td>
 																	<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico == null}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_SISTEMA_INFORMATICO|}"></a></td>
 																	<td	th:if="${accreditamentoWrapper.responsabileSistemaInformaticoStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.responsabileSistemaInformaticoStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td th:if="${accreditamentoWrapper.responsabileQualita != null}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileQualita.id}/edit|}"></a></td>
 																	<td th:if="${accreditamentoWrapper.responsabileQualita == null}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_QUALITA|}"></a></td>
 																	<td	th:if="${accreditamentoWrapper.responsabileQualitaStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.responsabileQualitaStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 															</tbody>
@@ -261,7 +261,7 @@
 																	<td	th:unless="${componente.new}" th:text="${componente.professione.nome}"></td>
 																	<td	th:if="${componente.new}" th:text="#{label.nd}">N/D</td>
 																	<td th:unless="${componente.new}">
-																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/delete|}"><span class="fa fa-trash"></span></a>
+																		<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${componente.id}/delete|}"><span class="fa fa-trash" title="#{label.elimina}"></span></a>
 																	</td>
 																	<td th:if="${componente.new}">
 																		<a><span class="fa fa-trash disabled"></span></a>
@@ -298,60 +298,60 @@
 																	<td><a th:text="#{label.attoCostitutivo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.attoCostitutivoStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.attoCostitutivoStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td><a th:text="#{label.esperienzaFormazione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.esperienzaFormazioneStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.esperienzaFormazioneStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td><a th:text="#{label.utilizzo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.utilizzoStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.utilizzoStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td><a th:text="#{label.sistemaInformatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.sistemaInformaticoStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.sistemaInformaticoStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td><a th:text="#{label.pianoQualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.pianoQualitaStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.pianoQualitaStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 																<tr>
 																	<td><a th:text="#{label.dichiarazioneLegale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/allegati/edit|}"></a></td>
 																	
 																	<td	th:if="${accreditamentoWrapper.dichiarazioneLegaleStato}">
-																		<span class="fa fa-check green"></span>
+																		<span class="fa fa-check green" title="#{label.ok}"></span>
 																	</td>
 																	<td	th:unless="${accreditamentoWrapper.dichiarazioneLegaleStato}">
-																		<span class="fa fa-remove red"></span>
+																		<span class="fa fa-remove red" title="#{label.non_inserito}"></span>
 																	</td>
 																</tr>
 															</tbody>
@@ -371,6 +371,8 @@
 			<script th:inline="javascript">
 			/*<![CDATA[*/
 				$(document).ready(function() {
+					
+					var stack_topright = {"dir1": "down", "dir2": "left", "push": "top", "firstpos1": 25, "firstpos2": 25};
 					
 					if ([[${currentTab}]] != null && [[${currentTab}]] != "tab1")
 						$('#'+[[${currentTab}]]).tab('show');
@@ -404,6 +406,7 @@
 										text:  [[#{message.compilare_tab1}]],
 										type: "warning",
 										hide: false,
+										stack: stack_topright,
 					                    buttons: {
 					                    	sticker: false
 					                    }                             
@@ -428,6 +431,7 @@
 										text:  [[#{message.compilare_tab2}]],
 										type: "warning",
 										hide: false,
+										stack: stack_topright,
 					                    buttons: {
 					                    	sticker: false
 					                    }                             
