--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -301,7 +301,7 @@
 									</div>
 									<!-- Invia dati -->
 									<div class="item form-group text-right">
-										<input class="btn btn-primary right" type="submit" name="saveTypeFull" value="full" th:value="#{label.crea_account}"/>
+										<input class="btn bg-green right" type="submit" name="saveTypeFull" value="full" th:value="#{label.crea_account}"/>
 									</div>
 								</div>
 							</form>
