--- a/src/main/resources/templates/user/editProfile.html
+++ b/src/main/resources/templates/user/editProfile.html
@@ -45,7 +45,7 @@
 		                    
 		                    <!-- Invia dati -->
 							<div class="item form-group text-right">
-								<a class="btn btn-default right" th:href="@{/profile/list}" th:text="#{label.annulla}"></a>
+								<a class="btn btn-primary right" th:href="@{/profile/list}" th:text="#{label.indietro}"></a>
 								<input class="btn right bg-green" type="submit" name="save" th:value="#{label.conferma}"/>
 							</div>
 						</form>
