fix grafico ai pulsanti di tipo btn-primary e bg-green
-adattato allo stile Gentella

--- a/src/main/resources/static/gentella/css/custom.css
+++ b/src/main/resources/static/gentella/css/custom.css
@@ -676,7 +676,7 @@ footer {
   text-decoration: none;
 }
 a.btn-success, a.btn-primary, a.btn-warning, a.btn-danger {
-  color: #fff !important;
+  color: #fff;
 }
 .btn {
   border-radius: 3px;
