--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -198,3 +198,12 @@ table.datatable-responsive-search thead .sorting_asc:after {
 	min-width: 100px;
 }
 
+.btn-primary:active:focus, .btn-primary:active:hover {
+	background-color: #1A82C3;
+  	border-color: #1A82C3;
+  }
+ 
+.btn:hover, .btn:active:focus, .btn:active:hover, .btn:focus  {
+	color: #fff;
+}
+
