rimosso e sostituito animate.css già presente in Gentella

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -71,13 +71,9 @@
 				
 			<!-- animate -->
 			<link rel="stylesheet"
-				href="../static/css/animate.css"
-				th:href="@{/css/animate.css}" />
-				
-			
-			
-				
-				
+				href="../static/gentella/css/animate.min.css"
+				th:href="@{/gentella/css/animate.min.css}" />
+					
 			<!--[if lt IE 9]>
 			        <script src="../assets/js/ie8-responsive-file-warning.js"></script>
 			        <![endif]-->
