--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,9 +21,15 @@
 				th:href="@{/gentella/css/animate.min.css}" />
 	
 		<!-- Custom styling plus plugins -->
+			
+			<link rel="stylesheet"
+				href="../static/gentella/css/custom.scss"
+				th:href="@{/gentella/css/custom.scss}" />
+				
 			<link rel="stylesheet"
 				href="../static/gentella/css/custom.css"
 				th:href="@{/gentella/css/custom.css}" />
+				
 				
 			<link rel="stylesheet"
 				href="../static/gentella/css/icheck/flat/green.css"
