--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
@@ -12,7 +12,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.allegati}">allegati</h2>
 						<th:block th:unless="${#lists.isEmpty(accreditamentoAllegatiWrapper.idEditabili)}">
-							<button class="btn bg-green pull-right" th:text="#{label.salva}" form="formAllegati" type="submit"></button>
+							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAllegati" type="submit"></button>
 						</th:block>
 						<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}|}"></a>
 						<div class="clearfix"></div>
