--- a/src/main/resources/templates/sede/sedeEdit.html
+++ b/src/main/resources/templates/sede/sedeEdit.html
@@ -13,7 +13,7 @@
 					<div class="x_title">
 						<h2 th:text="${sedeWrapper.tipologiaSede == 'SedeLegale'} ? #{label.sede_legale} : #{label.sede_operativa}">label.info_sede</h2>
 						<th:block th:unless="${#lists.isEmpty(sedeWrapper.idEditabili)}">
-							<button class="btn bg-green pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
+							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
 							<button class="btn btn-primary pull-right" onclick="loadSedeLegale()" th:if="${sedeWrapper.tipologiaSede == 'SedeOperativa'}" th:text="#{label.coincide_con_sede_legale}"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.nuovo}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/sede/new?tipologiaSede=${sedeWrapper.tipologiaSede}|}"></a>
 						</th:block>
