--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -56,7 +56,7 @@
 		                    <!-- Invia dati -->
 							<div class="item form-group text-right">
 								<a class="btn btn-default right" th:href="@{/home}" th:text="#{label.annulla}"></a>
-								<input class="btn right bg-green" type="submit" name="save" th:value="#{label.conferma}"/>
+								<input class="btn right btn-success" type="submit" name="save" th:value="#{label.conferma}"/>
 							</div>
 						</form>
 					</div>
