--- a/src/main/resources/templates/user/editUser.html
+++ b/src/main/resources/templates/user/editUser.html
@@ -76,7 +76,7 @@
 		                    <!-- Invia dati -->
 							<div class="item form-group text-right">
 								<a class="btn btn-primary right" th:href="@{/user/list}" th:text="#{label.indietro}"></a>
-								<input class="btn right bg-green" type="submit" name="save" th:value="#{label.conferma}"/>
+								<input class="btn right btn-success" type="submit" name="save" th:value="#{label.conferma}"/>
 							</div>
 						</form>
 					</div>
