--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -295,7 +295,7 @@
 							</div>
 
 							<!-- allegato 1 (etratto bilancio relativo formazione) -->
-							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, estrattoBilancioFormazione, ${++counter}, #{label.required_fatturato})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, estrattoBilancioFormazione, ${++counter}, #{label.required_fatturato})" ></th:block>
 							
 							<div class="divider-dashed"></div>
 							
@@ -364,7 +364,7 @@
 							</div>
 							
 							<!-- allegato 2 (budget previsionale) -->
-							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, budgetPrevisionale, ${++counter}, #{label.required_fatturato})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, budgetPrevisionale, ${++counter}, #{label.required_fatturato})" ></th:block>
 							
 							<div class="divider-dashed"></div>
 							
@@ -417,10 +417,10 @@
 							</div>
 							
 							<!-- allegato 3 (organigramma) -->
-							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, organigramma, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, organigramma, ${++counter}, null)" ></th:block>
 							
 							<!-- allegato 4 (funzionigramma) -->
-							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, funzionigramma, ${++counter}, null)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, funzionigramma, ${++counter}, null)" ></th:block>
 						</form>
 					</div>
 				</div>
