--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -293,17 +293,17 @@
 							
 							<!-- allegato 1 (atto di nomina) -->
 							<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
-								<th:block th:replace="fragments/allegati :: allegati(personaWrapper, attoNomina, ${++counter}, null)" ></th:block>
+								<th:block th:replace="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${++counter}, null)" ></th:block>
 							</div>
 							
 							<!-- allegato 2 (curriculum vitae) -->
 							<div th:unless="${personaWrapper.persona.legaleRappresentante}">
-								<th:block th:replace="fragments/allegati :: allegati(personaWrapper, cv, ${++counter}, null)"></th:block>
+								<th:block th:replace="fragments/allegati :: allegati(personaWrapper, true, cv, ${++counter}, null)"></th:block>
 							</div>
 							
 							<!-- allegato 3 (delega) -->
 							<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
-								<th:block th:replace="fragments/allegati :: allegati(personaWrapper, delega, ${++counter}, null)"></th:block>
+								<th:block th:replace="fragments/allegati :: allegati(personaWrapper, true, delega, ${++counter}, null)"></th:block>
 							</div>
 						</form>
 					</div>
